# pebble-russian-calendar-watchface

./: .gitignore  .lock-waf_linux2_build  CMakeLists.txt  README.md  appinfo.json  config.html  config.html~
src/: RussianCalendar.c
src/js/: pebble-js-app.js
